# truthy

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
examples/: and_or.rs  basic.rs  truthy_macro.rs
src/: lib.rs
