[package]
name = "truthy"
version = "0.0.1"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Check if a value is \"truthy\""
readme = "README.md"
keywords = ["bool", "boolean", "truthy"]
categories = []
repository = "https://github.com/spenserblack/truthy"
publish = false

[dependencies]

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/truthy" }
is-it-maintained-open-issues = { repository = "spenserblack/truthy" }
maintenance = { status = "actively-developed" }
