[package]
name = "truthy"
version = "1.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Check if a value is \"truthy\""
readme = "README.md"
keywords = ["bool", "boolean", "truthy"]
categories = []
repository = "https://github.com/spenserblack/truthy"
exclude = [
    ".travis.yml",
    ".editorconfig",
    ".github/*",
    ".gitignore",
    "CHANGELOG.md",
]

[features]
default = []
and-or = ["either"]

[dependencies]
either = { version = "1", optional = true }

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/truthy" }
is-it-maintained-open-issues = { repository = "spenserblack/truthy" }
maintenance = { status = "actively-developed" }
